# qemu

./: .gitlab-ci.yml  README.rst
.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml
configs/devices/riscv32-softmmu/: default.mak
crypto/: meson.build  sha224-internal.c  sha224_i.h
hw/block/: m25p80.c
hw/char/: esp32_uart.c  esp32c3_uart.c  meson.build
hw/dma/: esp32c3_gdma.c  meson.build
hw/gpio/: esp32_gpio.c  esp32c3_gpio.c  meson.build
hw/i2c/: esp32_i2c.c  meson.build
hw/misc/: esp32_ana.c  esp32_fe.c  esp32_phya.c  esp32_unknown.c  esp32_wifi.c  esp32_wifi_ap.c  esp32_wlan_packet.h  esp32c3_aes.c  esp32c3_cache.c  esp32c3_jtag.c  esp32c3_rsa.c  esp32c3_rtc_cntl.c  esp32c3_sha.c  meson.build  unimp-default.c
hw/nvram/: esp32_efuse.c  esp32c3_efuse.c  meson.build
hw/riscv/: Kconfig  esp32c3.c  esp32c3_clk.c  esp32c3_intmatrix.c  meson.build
hw/ssi/: esp32_spi.c  esp32c3_spi.c  meson.build
hw/timer/: esp32c3_systimer.c  esp32c3_timg.c  meson.build
hw/xtensa/: dwc_sdmmc.c  esp32.c  esp32_aes.c  esp32_ana.c  esp32_crosscore_int.c  esp32_dport.c  esp32_efuse.c  esp32_fe.c  esp32_flash_enc.c  esp32_frc_timer.c  esp32_gpio.c  esp32_i2c.c  esp32_intc.c  esp32_ledc.c  esp32_phya.c  esp32_rng.c  esp32_rsa.c  esp32_rtc_cntl.c  esp32_sha.c  esp32_spi.c  esp32_timg.c  esp32_uart.c  esp32_unknown.c  esp32_wifi.c  esp32_wifi_ap.c  esp32_wlan.h  esp32_wlan_packet.c  esp32_wlan_packet.h  meson.build  ssi_psram.c  unimp-default.c  xtensa_trace_mmio.c  xtensa_trace_mmio.h
include/hw/char/: esp32c3_uart.h
include/tcg/: tcg.h
pc-bios/: meson.build
(+42 files in other folders)
